# DaveAgent

./: .agent_history  .bandit  .coverage  .coveragerc  .flake8  .gitignore  .pylintrc  .pypirc.example  ANALISIS_SUBAGENTES_VS_NANOBOT.md  BUILD_README.md  CHANGELOG.md  COMPARACION_NANOBOT.md  CONFIGURACION.md  CONTEXT_COMPRESSION_IMPLEMENTATION_COMPLETE.md  CRITICAL_FIX_BLOCKING_SUBPROCESS.md  DEBUG_TOOL_HANGING.md  Dockerfile.sandbox  ENABLE_WIKI_GUIDE.md  ENHANCED_LOGGING_FOR_DEBUGGING.md  ESTADO_FINAL_SUBAGENTES.md  FASE1_CLI_IMPROVEMENTS_COMPLETE.md  FASE2_CRON_SYSTEM_COMPLETE.md  FASE3_AUTO_INJECTION_COMPLETE.md  FASE3_AUTO_INJECTION_PROGRESS.md  FASE4_TERMINAL_IMPROVEMENTS_COMPLETE.md  FASE5_AUTOCOMPLETION_COMPLETE.md  FINAL_TERMINAL_FIXES_SUMMARY.md  IMPLEMENTACION_COMPLETA.md  IMPLEMENTACION_LLM_AUTO_INJECTION_COMPLETE.md  INICIO_RAPIDO.md  INICIO_RAPIDO_PYPI.md  INSTALACION.md  INVESTIGATION_TEXTMESSAGE_SOURCE.md  LICENSE  LONG_RUNNING_AGENT_LIMITS.md  MANIFEST.in  MIGRATION_PHASE1_SUMMARY.md  MIGRATION_PHASE2_COMPLETE.md  NANOBOT_FEATURES_COMPLETE.md  NANOBOT_INTEGRATION_COMPLETE.md  (+56 more)
.claude/: settings.local.json
.github/: ACTIONS_GUIDE.md
daveagent-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ADK_POC_EXAMPLE.md  AUTOGEN_STATE_STRUCTURE.md  AUTOGEN_VS_ADK_COMPARISON.md  AUTO_SAVE_IMPLEMENTATION.md  BUILD_README.md  CHANGELOG.md  CODESEARCHER_GUIDE.md  COMO_USAR_PAQUETE.md  COMPLETE_SUMMARY.md  ESTRUCTURA.md  FILE_MENTIONS.md  INDEX.md  INICIO_RAPIDO.md  INSTALLATION.md  INSTALL_QUICK.md  LANGFUSE_INTEGRATION.md  LANGFUSE_SUMMARY.md  MEMORIA_README.md  MEMORY_SYSTEM.md  MIGRACION_ADK_RESUMEN_ES.md  MIGRATION_DOCS_INDEX.md  MIGRATION_ROADMAP.md  MIGRATION_SUMMARY.md  MIGRATION_TO_ADK_ANALYSIS.md  NANOBOT_STYLE_INTEGRATION.md  PACKAGE_USAGE.md  README_CLI.md  SESSION_MANAGEMENT_SYSTEM.md  SISTEMA_MEMORIA_IMPLEMENTACION.md  STATE_MANAGER_USAGE.md  STRUCTURE.md  TEAM_INTEGRATION.md  USING_SUBAGENTS_NANOBOT_STYLE.md  WORKSPACE_STRUCTURE.md
eval/: CodeAgent-v1.evaluacion_prueba_v1.json  README.md  agent_wrapper.py  analyze_agent_interactions.py  generate_all_reports.sh  generate_detailed_report.py  get_gold.py  predictions.jsonl  probe_args.py  (+3 more)
(+241 files in other folders)
