[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daveagent-cli"
version = "1.0.0"
description = "AI-powered coding assistant with intelligent agent orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DaveAgent Team", email = "davidmonterocrespo24@gmail.com"}
]
keywords = ["ai", "agent", "coding", "assistant", "llm", "autogen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "autogen-agentchat>=0.4.0",
    "autogen-ext[openai]>=0.4.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "wikipedia>=1.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/davidmonterocrespo24/DaveAgent"
Documentation = "https://daveagent.readthedocs.io"
Repository = "https://github.com/davidmonterocrespo24/DaveAgent"
"Bug Tracker" = "https://github.com/davidmonterocrespo24/DaveAgent/issues"

[project.scripts]
daveagent = "src.cli:main"

[tool.setuptools]
# Auto-discover all packages in src/
# This includes main.py and all subpackages
packages.find.where = ["."]
packages.find.include = ["src*"]

[tool.setuptools.package-data]
src = ["*.md", "*.txt", "*.py"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
